--- a/TestingSystem/WebContent/html/log_management.jspf
+++ b/TestingSystem/WebContent/html/log_management.jspf
@@ -1,3 +1,4 @@
+
 <%
 	LogDao logDao = new LogDaoImpl();
 	String accId = (String) TSUtil.getAttribute(request, "accId",
@@ -59,19 +60,22 @@
 					<td>Date</td>
 				</tr>
 				<c:set var="count" value="0" />
-				<c:forEach items="<%=logList%>" var="logs">
-					<tr>
-						<c:set var="count" value="${count + 1}" />
-						<td>${count}.</td>
-						<td>${logs.account.user.userId}</td>
-						<td>${logs.account.accId}</td>
-						<td>${logs.message}</td>
-						<td>${logs.logDate}</td>
-					</tr>
-				</c:forEach>
+				<tbody id="itemContainer">
+					<tr></tr>
+					<c:forEach items="<%=logList%>" var="logs">
+						<tr>
+							<c:set var="count" value="${count + 1}" />
+							<td>${count}.</td>
+							<td>${logs.account.user.userId}</td>
+							<td>${logs.account.accId}</td>
+							<td>${logs.message}</td>
+							<td>${logs.logDate}</td>
+						</tr>
+					</c:forEach>
+				</tbody>
 			</table>
+			<div align="center" class="tableNavigation"></div>
 		</div>
-
 	</c:when>
 	<c:otherwise>
 		<div style="color: red">No logs found!</div>
