--- a/TestingSystem/WebContent/html/user_management.jspf
+++ b/TestingSystem/WebContent/html/user_management.jspf
@@ -1,5 +1,3 @@
-<%@page import="org.apache.log4j.MDC"%>
-<%@page import="model.*"%>
 <%
 	UserDao userDao = new UserDaoImpl();
 	
@@ -53,7 +51,7 @@
 
 <c:choose>
    	<c:when test="<%=userList.size() > 0 %>">
-		<div class="emphasistable" style="margin-top: 20px" >
+		<div class="emphasisTable" style="margin-top: 20px" >
 		    <table id="one-column-emphasis" cellspacing="0" cellpadding="0" style="width: 1000px; font-size: 14px; border-bottom: 1px solid black;">
 		    	<thead style="background-color: #e8edff">
 		        <tr>
@@ -65,7 +63,7 @@
 		            <td>Actions</td>
 		        </tr>
 		        </thead>
-		        <tbody>
+		        <tbody id="itemContainer">
 		        <c:set var="count" value="0"/>
 				<c:forEach items="<%=userList %>" var="user">
 					<tr>
