--- a/TestingSystem/WebContent/html/message/errorMessage.jspf
+++ b/TestingSystem/WebContent/html/message/errorMessage.jspf
@@ -1,4 +1,5 @@
-<%@include file="/html/init.jsp"%>
+<%@page import="util.TSUtil"%>
+<link rel="stylesheet" type="text/css" href="<%=TSConstants.JQUERY_CSS%>"/>
 <%
 	final String errorMessage = (String) TSUtil.getAttribute(request, "errorMessage", "Failed to process your request!");
 %>
