--- a/TestingSystem/WebContent/html/edit_user.jspf
+++ b/TestingSystem/WebContent/html/edit_user.jspf
@@ -181,9 +181,10 @@
 														</select>
 													</c:when>
 													<c:otherwise>
-														<c:forEach items="${account.accountRoleMapsForAccId}" var="aRM">
+														<%--<c:forEach items="${account.accountRoleMapsForAccId}" var="aRM">
 															${aRM.role.roleName}<br/>
-														</c:forEach>
+														</c:forEach> --%>
+														${account.accountRoleMapsForAccId.toArray()[0].role.roleName}
 													</c:otherwise>
 												</c:choose>
 											</td>
