--- a/DataMiningDemo/WebContent/css/sticky-footer-navbar.css
+++ b/DataMiningDemo/WebContent/css/sticky-footer-navbar.css
@@ -37,3 +37,36 @@ body > .container {
 code {
   font-size: 80%;
 }
+
+        #newspaper-a
+        {
+            font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+            font-size: 12px;
+            /*margin: 45px;*/
+            margin-bottom: 45px;
+            margin-left: 45px;
+            margin-right: 45px;
+            width: 480px;
+            text-align: left;
+            border-collapse: collapse;
+            border: 1px solid #69c;
+        }
+        #newspaper-a th
+        {
+            padding: 12px 17px 12px 17px;
+            font-weight: normal;
+            font-size: 14px;
+            color: #039;
+            border-bottom: 1px dashed #69c;
+        }
+        #newspaper-a td
+        {
+            padding: 7px 17px 7px 17px;
+            color: #669;
+            border-bottom: 1px dashed #69c;
+        }
+        #newspaper-a tbody tr:hover td
+        {
+            color: #339;
+            background: #d0dafd;
+        }
