--- a/DataMiningDemo/WebContent/html/messages/highlightMessage.jspf
+++ b/DataMiningDemo/WebContent/html/messages/highlightMessage.jspf
@@ -1,10 +1,7 @@
-<%@include file="/html/init.jsp"%>
+<%@page import="util.DMUtil" %>
 <%
 	final String highlightMessage = DMUtil.getParameter(request, "highlightMessage", "Test");
 %>
-<div class="ui-widget">
-	<div class="ui-state-error ui-corner-all" style="padding: 0 .7em;">
-		<p><span class="ui-icon ui-icon-alert" style="float: left; margin-right: .3em;"></span>
-		<strong>Highlight:</strong><%= highlightMessage%></p>
-	</div>
+<div class="alert alert-warning">
+	<%= highlightMessage%>
 </div>
